<resources>
    <string name="app_name">Inventory Management</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="add_product_label">Add Product</string>
    <string name="first_fragment_label">Main Page</string>
    <string name="add_inventory">Add to Inventory</string>
    <string name="view_inventory">View Current Inventory</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <!-- Product creation -->
    <string name="product_name">Product Name</string>
    <string name="owner">Owner</string>
    <string name="year_purchased">Year Purchased</string>
    <string name="product_desc">Product Description</string>
    <string name="qty">Quantity</string>
    <string name="ppu">Price per Unit</string>
    <!-- User creation / login -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">CREATE ACCOUNT</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="have_account">Already Have An Account?</string>
    <string name="password_reset">SEND PASSWORD RESET EMAIL</string>
    <!-- Other User Strings / Logout -->
    <string name="logout">Logout</string>

</resources>